fix logo focus, flex-donate btn, search autocomplete, card truncate words

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -84,7 +84,6 @@
     font-size: 20px;
   }
   p {
-    font-size: 14px;
     color: $dark-gray;
     font-weight: 300;
     line-height: 24px;
@@ -130,7 +129,7 @@
 
   p, span, blockquote, b {
     display: initial;
-    font-size: 14px;
+    font-size: 15px;
     font-weight: light !important;
   }
 
